--- a/css/style.css
+++ b/css/style.css
@@ -948,7 +948,150 @@ padding-top: 5rem;}
 @media screen and (max-width: 600px) {
   
 }
-@media screen and (max-width: 580px){
+@media screen and (max-width: 500px){
+  .slideTwo-slide{height: 86rem;}
+  .contentWrap{}
+  .contentWrap .contentText{padding: 5.6rem 2rem 2rem;margin: 0 2rem 6rem;} /* 잘모르부분 공부하기 .. */
+  .contentWrap .contentText .contentTop{}
+  .contentWrap .contentText .contentTop > div{}
+  .contentWrap .contentText .contentTop > div >span{}
+  .contentTop1{font-size: 2.2rem; line-height: 2.8rem;}
+  .contentTopBig{font-size: 6rem;}
+  .contentTop3{ font-size: 2.2rem;font-weight: 200;}
+  .contentWrap .contentText .contentBottom{}
+  .contentWrap .contentText .contentBottom .basicBtn{margin-left: 0; }
+  .contentWrap .contentText .contentBottom .basicBtn>a{padding: 1rem 0; }
+
+  .content-video-wrap{height: 60rem; padding:0; }
+ .content-video{height: 60rem;}
+ .video{}
+ .video>video{height: 60rem;}
+
+ .video-btn{ position: absolute;
+   top: 50%;
+   left: 50%;
+   transform: translate(-50%,-50%);
+   display: block;
+   width: 100px;
+   width: 10rem;
+   height: 100px;
+   height: 10rem;
+   margin: 0 auto;
+   border: 2px solid rgba(255, 255, 255, 0.2);
+   -webkit-border-radius: 50%;
+   border-radius: 50%;
+   background: rgba(17, 17, 17, 0.8);
+   -webkit-transition: border .2s, background .2s;
+   transition: border .2s, background .2s;}
+   .video-btn::after{position: absolute;
+     top: 50%;
+     left: 50%;
+     margin: -8px 0 0 -5px;
+     margin: -0.8rem 0 0 -0.5rem;
+     border-top: 9px solid transparent;
+     border-bottom: 9px solid transparent;
+     border-left: 14px solid #fff;
+     vertical-align: middle;
+     -webkit-transition: border-color .2s;
+     transition: border-color .2s;
+     content: '';}
+     .f-block {border: 1px solid #111111;margin-top: -1px;padding: 8rem 0;}
+     .slideThird-wrap{width: 100%; background: #111111; text-align: center;padding: 0 0 12rem;}
+     .slideThird{ margin: 0 auto; max-width: 190.2rem; height: 100%;}
+     
+     .thirdSlide {
+       width: 100%;
+       height: 100%;
+     }
+     .thirdSlide-wrapper{
+      
+     }
+     
+     .third-slide {
+      /*  min-width: 190.2rem; */
+       height: 23rem;
+       text-align: center;
+       font-size: 18px;
+       background: rgb(0, 104, 138);
+     
+       /* Center slide text vertically */
+       display: -webkit-box;
+       display: -ms-flexbox;
+       display: -webkit-flex;
+       display: flex;
+       -webkit-box-pack: center;
+       -ms-flex-pack: center;
+       -webkit-justify-content: center;
+       justify-content: center;
+       -webkit-box-align: center;
+       -ms-flex-align: center;
+       -webkit-align-items: center;
+       align-items: center;
+       position: relative; 
+     }
+       
+     
+     .third-slide1{background: url(../img/electrified-gv70-2-pc-1920x1080.jpg) no-repeat center center/100%;}
+     .third-slide2{background: url(../img/electrified-gv70-4-pc-1920x1080.jpg) no-repeat center center/100%;}
+     .third-slide3{background: url(../img/electrified-gv70-5-pc-1920x1080.webp) no-repeat center center/100%;}
+     .third-slide4{background: url(../img/electrified-gv70-6-pc-1920x1080.jpg) no-repeat center center/100%;}
+     .third-slide5{background: url(../img/electrified-gv70-7-pc-1920x1080.jpg) no-repeat center center/100%;}
+     .fifth-content { margin-top: -1px;}
+     .fifthSwiper {
+      height: 30rem;
+      /* max-width: 1840px; */
+      margin: 0 auto;
+    
+    }
+    .fifth-content{width: 100%; height: 64rem; background: #111;}
+    .fifth-wrap{max-width: 192rem;height: 100%; background: #111;margin: 0 auto; text-align: center;}
+    .fifth-text{padding-bottom: 7.3rem;}
+    
+    .fifthSwiper-slide {
+      text-align: center;
+      font-size: 18px;
+      background: #fff;
+    
+      /* Center slide text vertically */
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: -webkit-flex;
+      display: flex;
+      -webkit-box-pack: center;
+      -ms-flex-pack: center;
+      -webkit-justify-content: center;
+      justify-content: center;
+      -webkit-box-align: center;
+      -ms-flex-align: center;
+      -webkit-align-items: center;
+      align-items: center;
+    }
+    .fifthSwiper-slide:nth-child(1){background: url(../img/genesis-kr-main-motortrend-award-22-desktop-1920x960.jpg) no-repeat center center/100%;}
+    .fifthSwiper-slide:nth-child(2){background: url(../img/genesis-kr-main-motortrend-award-22-desktop-1920x960.jpg)  no-repeat center center/100%;}
+    .fifthSwiper-slide:nth-child(3){background: url(../img/fifth_slide3big.jpg)  no-repeat center center/100%;}
+    .fifthSwiper-slide:nth-child(4){background: url(../img/w-2021-KAJA-02.jpg)  no-repeat center center/100%;}
+    .fifthSwiper-slide:nth-child(5){background: url(../img/genesis-good-design-1920x960-06.jpg)  no-repeat center center/100%;}
+    .fifthSwiper-slide  {
+      display: block;
+      width: 100%;
+      height: 23rem;
+      object-fit: cover;
+    }
+    
+    .fifth-inner{margin-top: 4rem;margin-left: 1rem;}
+    .fifth-inner p{width: 52rem; text-align: left;}
+    .fifth-inner p.fifth-tocontentTop3{
+      font-size: 2rem;
+      font-weight: 300;
+      color: #ad7b61;
+      line-height: 4rem;
+      padding-top: 11rem;
+      padding-left: 1.1rem;
+    }
+     
+    .fifth-text{
+     display: none;
+    }
  
  
 }
