--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,8 @@ body {
   padding: 0;
   -webkit-tap-highlight-color: transparent;
 }
+.container{ max-width: 192rem ; margin: 0 auto;}
+
 /* swiper */
 .twoDepth {
   width: 100%;
@@ -783,9 +785,60 @@ padding-top: 5rem;}
   font-weight: 300;
   padding-top: 3rem;
 }
-
-
-
+.sixth-content{width: 100%; background: #111; color: #fff;    padding:24rem 0;}
+.sixth-content .sixth-flex{display: flex; justify-content: space-between; }
+.sixth-content .sixth-flex .sixth-box1{width: 50%;vertical-align: top;box-sizing: border-box; position: relative;}
+.sixth-content .sixth-flex .sixth-box1:after{
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-color: #000;
+  opacity: 0.5;
+  content: '';
+  z-index: 1;
+  }
+.sixth-content .sixth-flex>div:nth-child(2){margin-left: 4rem;}
+.sixth-content .sixth-flex .sixth-box1 .sixth-img{}
+.sixth-content .sixth-flex .sixth-box1 .sixth-img img{box-sizing: border-box;width: 100%;}
+.sixth-content .sixth-flex .sixth-box1 .sixth-texts{
+ position: absolute;top: 0; left: 0;  padding: 5.6rem 36rem 5.6rem 6rem; z-index: 2;}
+.sixth-content .sixth-flex .sixth-box1 .sixth-texts .sixth-tx1{}
+.sixth-content .sixth-flex .sixth-box1 .sixth-texts .sixth-tx1 span{font-weight: 200;font-size: 4.2rem;letter-spacing: -0.021em;line-height: 5rem;}
+.sixth-content .sixth-flex .sixth-box1 .sixth-texts .sixth-tx2{margin-top: 1.2rem;font-size: 1.6rem;line-height: 2.8rem; font-weight: 300;}
+.sixth-content .sixth-flex .sixth-box1 .sixth-texts .sixth-tx3{margin-top: 2.1rem;}
+.sixth-content .sixth-flex .sixth-box1 .sixth-texts .sixth-tx3 a{}
+.sixth-content .sixth-flex .sixth-box1 .sixth-texts .sixth-tx3 a span{color: #fff; font-size: 1.6rem; position: relative;}
+.sixth-content .sixth-flex .sixth-box1 .sixth-texts .sixth-tx3 a span::after{
+ content: "";
+ position: absolute;
+ border: 2px solid #fff;
+ width: 0.4rem;
+ height: 0.4rem;
+ border-width: 2px 2px 0 0;
+ transform: rotate(45deg);
+ right: -16%;
+}
+span.six-position1::after{top: 37%;}
+span.six-position2::after{top: 35%;}
+.sixth-content .sixth-flex .sixth-box1 .sixth-texts .sixth-tx3 a span::before{
+  content: "";
+  position: absolute;
+  top: 95%;
+  left: 0;
+  width: 0;
+  height: 1px;
+  transition: .5s;
+}
+.sixth-content .sixth-flex .sixth-box1 .sixth-texts .sixth-tx3 a:hover span::before{
+  content: "";
+  position: absolute;
+  height: 1px;
+  width: 7.2rem;
+  background: #fff;
+}
+/* 반응형 */
 @media screen and (max-width: 1669px){
  
 
@@ -855,11 +908,7 @@ padding-top: 5rem;}
 @media screen and (max-width: 1207px){
 
 }
-@media screen and (max-width: 1097px){
 
-
-
-}
 @media screen and (max-width: 1024px){
   .nav{width: 100%; background: #000; font-size: 1.4rem; height: 5.9rem;  }
   .nav-container{height: 5.9rem; padding: 0 2rem;  background: #000; border-bottom: 1px solid #1e1e1e;}
@@ -1043,7 +1092,7 @@ padding-top: 5rem;}
       margin: 0 auto;
     
     }
-    .fifth-content{width: 100%; height: 64rem; background: #111;}
+    .fifth-content{width: 100%; height: 64rem; background: #111;padding-bottom: 21.6rem;}
     .fifth-wrap{max-width: 192rem;height: 100%; background: #111;margin: 0 auto; text-align: center;}
     .fifth-text{padding-bottom: 7.3rem;}
     
