--- a/css/style.css
+++ b/css/style.css
@@ -803,7 +803,7 @@ padding-top: 5rem;}
 .sixth-content .sixth-flex .sixth-box1 .sixth-img{}
 .sixth-content .sixth-flex .sixth-box1 .sixth-img img{box-sizing: border-box;width: 100%;}
 .sixth-content .sixth-flex .sixth-box1 .sixth-texts{
- position: absolute;top: 0; left: 0;  padding: 5.6rem 36rem 5.6rem 6rem; z-index: 2;}
+ position: absolute;top: 0; left: 0;  padding: 5.6rem 36rem 5.6rem 6rem; z-index: 2; transition: .3s;}
 .sixth-content .sixth-flex .sixth-box1 .sixth-texts .sixth-tx1{}
 .sixth-content .sixth-flex .sixth-box1 .sixth-texts .sixth-tx1 span{font-weight: 200;font-size: 4.2rem;letter-spacing: -0.021em;line-height: 5rem;transition: .3s;}
 .sixth-content .sixth-flex .sixth-box1 .sixth-texts .sixth-tx2{margin-top: 1.2rem;font-size: 1.6rem;line-height: 2.8rem; font-weight: 300; transition: .3s;}
@@ -850,7 +850,9 @@ span.six-position2::after{top: 35%;}
 
   
 }
-@media screen and (max-width: 1501px){
+@media screen and (max-width: 1400px){
+  .sixth-content .sixth-flex .sixth-box1 .sixth-texts{
+    padding: 5.6rem 31rem 5.6rem 6rem;}
 
 
 }
@@ -873,6 +875,7 @@ span.six-position2::after{top: 35%;}
   .nav-search .navBtn .searchbtn>button>a>img{width: 1.7rem; height: 1.7rem;}
   .nav-search .navBtn .threebox>button{width: 5rem; height: 6.9rem; }
   .nav-search .navBtn .threebox>button>a>span{display: inline-block; width: 2rem; height: 2px; background: white; transition: all 0.3s; position: absolute; margin-left: -1rem; }
+ 
 
 
 }
@@ -901,15 +904,20 @@ span.six-position2::after{top: 35%;}
    .three-footer .three-footer-menu ul li a i{margin-right: 0.8rem;text-align: center;}
    .three-footer .three-en-ko button{display: none;}
    .three-inner{padding: 4rem 16rem;}
-   .sixth-content .sixth-flex .sixth-box1 .sixth-texts .sixth-tx2{     font-size: 1.2rem; line-height: 1.6rem; font-weight: 300;}
+   .sixth-content .sixth-flex .sixth-box1 .sixth-texts .sixth-tx2{ font-size: 1.6rem;
+    line-height: 2rem; font-weight: 300;}
     .sixth-content .sixth-flex .sixth-box1 .sixth-texts .sixth-tx1 span{font-weight: 200;font-size: 2.8rem;letter-spacing: -0.021em;line-height: 4rem;}
-   .sixth-content .sixth-flex .sixth-box1 .sixth-texts .sixth-tx3 a span{color: #fff; font-size: 1.2rem;}
-   .sixth-content .sixth-flex .sixth-box1 .sixth-texts .sixth-tx3 a:hover span::before{width: 5.5rem;}
+   .sixth-content .sixth-flex .sixth-box1 .sixth-texts .sixth-tx3 a span{color: #fff; font-size: 1.4rem;}
+   .sixth-content .sixth-flex .sixth-box1 .sixth-texts .sixth-tx3 a:hover span::before{width: 6.5rem;}
+   .sixth-content .sixth-flex .sixth-box1 .sixth-texts{
+    padding: 5.6rem 25rem 5.6rem 6rem;}
 
 
 
 }
-@media screen and (max-width: 1207px){
+@media screen and (max-width: 1180px){
+  .sixth-content .sixth-flex .sixth-box1 .sixth-texts{
+    padding: 5.6rem 11rem 5.6rem 6rem;}
 
 }
 
@@ -938,15 +946,30 @@ span.six-position2::after{top: 35%;}
   .three-footer{display: none;}
   .f-block{display: block;}
   .fourth-content{display: none;}
+  .sixth-content .sixth-flex .sixth-box1 .sixth-texts .sixth-tx2{ font-size: 1.4rem;
+    line-height: 1.8rem; font-weight: 300;}
+    .sixth-content .sixth-flex .sixth-box1 .sixth-texts .sixth-tx1 span{font-weight: 200;font-size: 2rem;letter-spacing: -0.021em;line-height: 4rem;}
+   .sixth-content .sixth-flex .sixth-box1 .sixth-texts .sixth-tx3 a span{color: #fff; font-size: 1.2rem;}
+   .sixth-content .sixth-flex .sixth-box1 .sixth-texts .sixth-tx3 a:hover span::before{width: 5.5rem;}
+   .sixth-content .sixth-flex .sixth-box1 .sixth-texts {
+    padding: 2.6rem 11rem 5.6rem 4rem;
+}
+  
 }
 @media screen and (max-width: 960px){
-
+  
     
    
   
   
 }
 @media screen and (max-width: 890px){
+  .container.sixth-flex {flex-direction: column;}
+  .sixth-content .sixth-flex>div:nth-child(2){margin-left: 0;}
+  .sixth-content .sixth-flex>div:nth-child(2){margin-top:0.5rem;}
+  .sixth-content .sixth-flex .sixth-box1 {width: 100%;}
+  .sixth-content .sixth-flex .sixth-box1 .sixth-texts{padding: 5.6rem 31rem 5.6rem 6rem;}
+
 
   
 }
@@ -998,7 +1021,10 @@ span.six-position2::after{top: 35%;}
     
   
 }
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 550px) {
+  .sixth-content .sixth-flex .sixth-box1 .sixth-texts {padding: 3.6rem 5rem 5.6rem 4rem;}
+  .sixth-content {margin-top: -1px;}
+  
   
 }
 @media screen and (max-width: 500px){
@@ -1145,7 +1171,10 @@ span.six-position2::after{top: 35%;}
     .fifth-text{
      display: none;
     }
- 
+    .sixth-content {padding: 7rem 0;}
+    .fifth-content { height: 32rem; padding-bottom: 10rem;}
+    .fifth-inner p.fifth-tocontentTop3{font-size: 1.6rem; line-height: 2rem;padding-top: 13rem;}
+    
  
 }
 
